--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- templates/index.html -->
+<!-- index.html -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>ロト7予測機</h1>
-    <p>ここにページの内容が入ります。</p>
+    <form action="/predict" method="post">
+        <button type="submit">予想する</button>
+    </form>
 </body>
 </html>
