--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+<link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 <!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
