--- a/templates/index.html
+++ b/templates/index.html
@@ -17,5 +17,8 @@
         <h2>予想結果:</h2>
         <p>{{ predicted_numbers }}</p>
     {% endif %}
+    <footer>
+        <p>※本サービスは当選を保証するものではありません。自己責任でお楽しみください。</p>
+    </footer>
 </body>
 </html>
