--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         </label>
         <label>
             <input type="radio" name="mode" value="weighted">
-            過去データ重視(仮)
+            CSVの出現回数を重視
         </label>
         <br><br>
         <button type="submit">予想する</button>
